# iNESsential

./: CPU.cpp  CPU.h  Emulator.cpp  Emulator.h  Makefile  NES.c  PixelBuffer.h  addresing_modes.c  addressing_modes.c  addressing_modes.h  debug.txt  devlog.txt  main.cpp  meson.build  nestest.nes  opcodes.c  opcodes.h  readme.md  readme.txt
json-c/lib/: json-c-static.lib  json-c.lib
json-c/lib/pkgconfig/: json-c.pc
src/: CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  DebugWindow.cpp  DebugWindow.h  Definitions.h  Emulator.cpp  Emulator.h  PPU.cpp  PPU.h  PixelBuffer.cpp  PixelBuffer.h
src/components/: CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  PPU.cpp  PPU.h
src/frontend/: DebugWindow.cpp  DebugWindow.h  PixelBuffer.cpp
src/registerTypes/: reg16.cpp  reg16.h  reg8.cpp  reg8.h  shiftReg.cpp  shiftReg.h
